.vscode/allianceuat_compare/force-app/main/default/objects/Replacement_Skill__c/Replacement_Skill__c.object-meta.xml
<CustomObject>
    <label>Replacement Skill</label>
    <nameField>
        <displayFormat>RSL-{00000}</displayFormat>
        <label>Replacement Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replacement Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>