.vscode/allianceuat_compare/force-app/main/default/objects/Replacement_Skill__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>Shiftmatch_Location__r.Description__c</formula>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>