.vscode/allianceuat_compare/force-app/main/default/objects/Replacement_Skill__c/fields/Replacement_Skill__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Skill__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Replacement Skill</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Shiftmatch_Skill__c.Status__c</field>
            <operation>equals</operation>
            <value>Mandatory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Shiftmatch_Skill__c</referenceTo>
    <relationshipLabel>Replacement Skills (Replacement Skill)</relationshipLabel>
    <relationshipName>Replacement_Skills</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>