.vscode/allianceuat_compare/force-app/main/default/objects/Replacement_Skill__c/fields/Replacement_Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Skill_Name__c</fullName>
    <formula>Replacement_Skill__r.Description__c</formula>
    <label>Replacement Skill Name</label>
    <type>Text</type>
</CustomField>