.vscode/allianceuat_compare/force-app/main/default/objects/Replacement_Skill__c/fields/Shiftmatch_Location__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shiftmatch Location</label>
    <referenceTo>Shiftmatch_Location__c</referenceTo>
    <relationshipLabel>Replacement Skills</relationshipLabel>
    <relationshipName>Replacement_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>