.vscode/allianceuat_compare/force-app/main/default/objects/Replacement_Skill__c/fields/Shiftmatch_Skill__c.field-meta.xml
<CustomField>
    <fullName>Shiftmatch_Skill__c</fullName>
    <label>Shiftmatch Skill</label>
    <referenceTo>Shiftmatch_Skill__c</referenceTo>
    <relationshipName>Replacement_Skills_By_Location</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>